frontend/test/should_fail/new_object_class.grg
rule r
{
	modify {
	---
		exec({::x = new Furchtbar()});
	}
}
